Switching to HSQLDB which reports the original exception

--- a/src/test/resources/persistence.properties
+++ b/src/test/resources/persistence.properties
@@ -1,5 +1,10 @@
-jpa.driverClassName=org.h2.Driver
-jpa.url=jdbc:h2:mem:syncopedb;DB_CLOSE_DELAY=-1
+jpa.driverClassName=org.hsqldb.jdbcDriver
+jpa.url=jdbc:hsqldb:mem:syncopedb
+jpa.dialect=org.apache.openjpa.jdbc.sql.HSQLDictionary
+
+//jpa.driverClassName=org.h2.Driver
+//jpa.url=jdbc:h2:mem:syncopedb;DB_CLOSE_DELAY=-1
+//jpa.dialect=org.apache.openjpa.jdbc.sql.H2Dictionary
 jpa.username=sa
 jpa.password=
-jpa.dialect=org.apache.openjpa.jdbc.sql.H2Dictionary
+
