--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
   <packaging>jar</packaging>
   <properties>
     <openjpa.version>2.4.1</openjpa.version>
-    <cxf.version>3.1.6</cxf.version>
+    <cxf.version>3.1.7-SNAPSHOT</cxf.version>
     <spring.version>4.2.5.RELEASE</spring.version>
     <slf4j.version>1.7.21</slf4j.version>
     <h2.version>1.4.190</h2.version>
+    <hsqldb.version>2.3.4</hsqldb.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
@@ -99,11 +100,19 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
+            <scope>test</scope>
+    </dependency>
+    <!--
+    <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>${h2.version}</version>
       <scope>test</scope>
     </dependency>
+    -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
